# server/docs/swagger.json
@@ -48,7 +48,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/auth/favorites/id/{id}": {
             "post": {
                 "security": [
                     {
@@ -68,13 +70,11 @@
                 "summary": "Добавление кошки в список любимых",
                 "parameters": [
                     {
-                        "description": "Информация о кошке и пользователе",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entities.UpdateFavoriteRequest"
-                        }
+                        "type": "integer",
+                        "description": "ID кошки для добавления в список любимых",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -117,13 +117,11 @@
                 "summary": "Удаление кошки из списка любимых",
                 "parameters": [
                     {
-                        "description": "Информация о кошке и пользователе",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/entities.UpdateFavoriteRequest"
-                        }
+                        "type": "integer",
+                        "description": "ID кошки для удаления из списка любимых",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -663,15 +661,6 @@
                 "temper": {
                     "type": "string",
                     "example": "Спокойный"
-                }
-            }
-        },
-        "entities.UpdateFavoriteRequest": {
-            "type": "object",
-            "properties": {
-                "cat_id": {
-                    "type": "integer",
-                    "example": 3
                 }
             }
         },
